--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -84,7 +84,6 @@
 
             <TextView
                 android:layout_below="@+id/user_name"
-                android:paddingLeft="10dp"
                 android:textSize="12dp"
                 android:layout_marginEnd="10dp"
                 android:textColor="#33b5e5"
@@ -99,6 +98,7 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_ellipses"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
@@ -125,15 +125,28 @@
         android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:id="@+id/status_bar"
+        android:layout_below="@+id/banner_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#737074"
+        android:text="15 पसंद . 34 शेयर . 4 राय"
+        />
+
     <RelativeLayout
         android:layout_centerHorizontal="true"
         android:id="@+id/action_section"
-        android:layout_below="@+id/banner_image"
+        android:layout_below="@+id/status_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RelativeLayout
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="20dp"
             android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -145,12 +158,15 @@
                 android:src="@drawable/ic_like_heart"
                 />
             <TextView
-                android:textColor="@color/black"
+                android:visibility="visible"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/like_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="15 पसंद किया"/>
+
+                android:textSize="12sp"
+                android:textColor="#3b3939"
+                android:text="पसंद करें" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -165,16 +181,17 @@
             android:layout_height="40dp"
             android:src="@drawable/whatsapp" />
             <TextView
-                android:textColor="@color/black"
+                android:textColor="#3b3939"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/whatsapp_sharing"
                 android:layout_width="wrap_content"
+                android:visibility="visible"
                 android:layout_height="wrap_content"
-                android:text="20 शेयर"/>
+                android:text="शेयर करें"/>
 
         </RelativeLayout>
         <RelativeLayout
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -188,12 +205,14 @@
             />
 
             <TextView
-                android:textColor="@color/black"
+                android:textColor="#3b3939"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/comment_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10 विचार "/>
+                android:visibility="visible"
+
+                android:text="राय दें"/>
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
